# data-source-ranking

./: .gitignore  README.md  amplify.yml  package-lock.json  package.json  pyproject.toml
amplify/: backend.ts
amplify/data/: resource.ts
amplify/product-api/: resource.ts
amplify/product-state/: resource.ts
api/: __init__.py  lambda_handler.py  main.py  product_store.py  run_store.py  settings.py
data/: api_run_reviews.jsonl  api_runs.jsonl
docs/: architecture.md  decision_policy.md  demo_script.md  prompt_examples.md  ui_walkthrough.md
evals/: test_agent_loop.py  test_agent_state.py  test_all_scorers.py  test_api.py  test_authority_scoring.py  test_cli.py  test_completeness_scoring.py  test_context_requests.py  test_corroboration_scoring.py  test_decision_engine.py  test_decisions.py  test_directness_scoring.py  test_feedback.py  test_freshness_scoring.py  test_models.py  test_owner_resolution.py  test_ownership_scoring.py  test_policy.py  test_product_store.py  test_prompts.py  test_ranking.py  test_reliability_scoring.py  test_review_responses.py  test_scenarios.py  test_sensitivity_scoring.py  test_simulated_retrieval.py  test_specificity_scoring.py
fixtures/: README.md
fixtures/bundles/: acme_auto_handoff.json  acme_unsupported_claim_review.json  beta_needs_owner_validation.json  betaworks_old_proposal_review.json  delta_contradictory_sources.json  deltabank_sensitive_partner_material_review.json  gamma_blocked.json  gammahealth_unclear_owner_review.json  (+1 more)
scripts/: write-local-ui-env.mjs  write-ui-api-env.mjs
ui/: .env.local.example  README.md  index.html  package-lock.json  package.json
ui/src/: index.css  (+1 more)
(+79 files in other folders)
