[project]
name = "data-source-ranking"
version = "0.1.0"
description = "Evidence-quality ranking and weak-source approval prototype for automated email context."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.10,<3.0",
  "typer>=0.15,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.8,<1.0",
]

[project.scripts]
data-source-ranking = "data_source_ranking.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["evals"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "evals"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

